--- a/flutter_crud/android/app/build.gradle
+++ b/flutter_crud/android/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
+    id "com.android.application"
+    id "com.google.gms.google-services"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -41,4 +43,7 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies{
+    implementation(platform("com.google.firebase:firebase-bom:33.3.0"))
 }
