--- a/flutter_crud/pubspec.yaml
+++ b/flutter_crud/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.4.1
   cloud_firestore: ^5.4.1
+  random_string: ^2.3.1
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
